mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_composite_params.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
31
missing
3
9
x
24
-1
0
4
-1
8
0
