mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_dynamic_interface.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: 2 errors found

error[E0308]: Generic dynamic interface 'dyn<Box<...>>' is not supported by the current ABI
--> test_scripts/error_cases/generic_dynamic_interface.mux:7:15
   |
 7 | func take_int(dyn<Box<int>> value) returns int {
   |               ^^^^^^^^^^^^^
   |
= help: Use dyn<InterfaceName> with a non-generic interface, or pass the concrete class through a generic function.

error[E0308]: Generic dynamic interface 'dyn<Box<...>>' is not supported by the current ABI
--> test_scripts/error_cases/generic_dynamic_interface.mux:11:18
   |
11 | func take_string(dyn<Box<string>> value) returns string {
   |                  ^^^^^^^^^^^^^^^^
   |
= help: Use dyn<InterfaceName> with a non-generic interface, or pass the concrete class through a generic function.
