mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_enum_arity.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: 1 error found

error[E0310]: Generic type 'MyBox' requires 1 type argument(s), got 2
--> test_scripts/error_cases/generic_enum_arity.mux:6:5
   |
 6 |     MyBox<int, string> b
   |     ^^^^^^^^^^^^^^^^^^
   |
= help: Provide exactly 1 type argument in angle brackets, e.g. MyBox<T>
