mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_enum_nested.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
counted 5
named deep
counted empty
none
