mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_enum_typed_decl.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
42
-1
hello
1 = one
