mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_enums.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
full 5
empty
full hi
1 one
2
7
full alpha
empty
