mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_new_without_type_args.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: 1 error found

error[E0303]: 'Slot' is generic, so 'Slot.new()' does not say what it holds
--> test_scripts/error_cases/generic_new_without_type_args.mux:17:14
   |
17 |     auto s = Slot.new()
   |              ^^^^^^^^^^
   |
= help: Name the type arguments, as in Slot<int>.new().
